...
        "visit.wrong_office", "visit.deal_off", "visit.thanks", "visit.gossip.next", "visit.gossip.none",
        "visit.challenge.won", "visit.challenge.double", "visit.challenge.lost",
    ]

    static func optionKey(_ kind: VisitOption.Kind) -> String {
        switch kind {
        case .accept: "visit.option.accept"
        case .acceptWithVideo: "visit.option.accept_video"
        case .payBail: "visit.option.pay_bail"
        case .release: "visit.option.release"
        case .payFine: "visit.option.pay_fine"
        case .forgiveWithVideo: "visit.option.forgive_video"
        case .sell: "visit.option.sell"
...
